--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-SESSION_SECRET="secret"
-GG_CLIENT_ID = "206433335107-7nucg78e97p9rm0l21e5amgtli030406.apps.googleusercontent.com"
-GG_CLIENT_SECRET = "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"
+GOOGLE_CLIENT_ID="560768197808-mur1p64ibglu85dndtbrf7qhdioa82i6.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="7OOLrGhqBgWoO1XBVBXhGO8q"
+SESSION_SECRET="TOPSECRETWORD"
 PG_USER="postgres"
 PG_HOST="localhost"
-PG_DATABASE="Project_web"
-PG_PASSWORD="1234"
+PG_DATABASE="secrets"
+PG_PASSWORD="123456"
 PG_PORT="5432"
+EMAIL_PASS = 'oxqdfaaifudssnce'
