--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ PG_DATABASE="Project_web"
 PG_PASSWORD="1234"
 PG_PORT="5432"
 EMAIL_PASS = 'oxqdfaaifudssnce'
+MOMO_SECRET_KEY = 'K951B6PE1waDMi640xX08PD3vg6EkVlz'
+MOMO_ACCESS_KEY = 'F8BBA842ECF85'
